# kv-robot-ws

./: .gitignore  README.md
arm_control/: CMakeLists.txt  arm_control_plugins.xml  package.xml
arm_control/config/: kv_control.yaml
arm_control/launch/: control.launch  kv_control.launch  moveit.launch  rviz.launch
arm_control/src/: joint_trajectory_controller.cpp
kv_description/: CMakeLists.txt  package.xml
kv_description/launch/: description.launch  display.launch  gazebo.launch  rviz.launch
kv_description/meshes/: arm_hand_link.stl  base_link.stl  big_arm_arm_link.stl  calf_big_arm_link.stl  foot_thigh_link.stl  hand_finger_link.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  link7.stl  thigh_calf_link.stl  toe_foot_link.stl  world_foot_link.stl
kv_description/rviz/: urdf.rviz
kv_description/urdf/: armurdf.urdf  kevinlinpr_v4.transmission.xacro  kevinlinpr_v4_robot_urdf.xacro  kv.new.urdf.xacro  kv.out.xacro  kv.urdf  kv.urdf.back.xacro  kv.urdf.xacro
kv_gazebo/: CMakeLists.txt  package.xml
kv_gazebo/config/: trajectory_control.yaml
kv_gazebo/launch/: empty_world.launch  kv.launch  kv_trajectory_controller.launch
kv_gazebo/worlds/: kv.world
kv_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kv_moveit_config/config/: arm.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
kv_moveit_config/launch/: arm_moveit_controller_manager.launch.xml  default_warehouse_db.launch  (+14 more)
kv_opencv/: CMakeLists.txt  package.xml
robot_control/: CMakeLists.txt  package.xml
(+8 files in other folders)
